Fix: CORS and Api Key security issue fix